MD Extensions: update extensions when dev mode toggled

Bug: 796650
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I1dc50ba6eb8e7b2f01992fdcee5ade2d7c6f35e1
Reviewed-on: https://chromium-review.googlesource.com/940432
Commit-Queue: Esmael El-Moslimany <aee@chromium.org>
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541210}
Former-commit-id: b1ea193294955a0b91a2d3b2b70f36ad2d29e059